--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -11,16 +11,16 @@
     <body>
 
         <div id="sidebar">
-            <div class="container" onclick="Function1(this)">
+            <a class="container" onclick="Function1(this)">
                 <div class="bar1" style="position: fixed; top: 20px; left: 21px;"></div>
                 <div class="bar2" style="position: fixed; top: 33px; left: 21px;"></div>
                 <div class="bar3" style="position: fixed; top: 46px; left: 21px;"></div>
-            </div>
+            </a>
 
             <ul style="display: block;">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
 
         </div>
