--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -31,6 +31,95 @@ body, html {
     padding: 0;
     scroll-behavior: smooth;
 }
+ /*too many styles later on*/
+.h1_home {
+    position: absolute;
+    top: 90px;
+    left: 80px;
+    z-index:1;
+}
+
+.form_home {
+    position: absolute;
+    top: 185px;
+    left: 80px;
+    z-index:1;
+}
+
+.img_code1 {
+    position: absolute;
+    top: 0px;
+    left: 683px;
+    z-index:1;
+}
+
+/*this is not in html cause there is called downloadBtn*/.a_code1_download {
+    position: relative;
+    top: 10px;
+    left: 280px;
+    z-index:1;
+}
+
+.h1_code_example {
+    position: absolute;
+    top: -100px;
+    left: 679px;
+    z-index:1;
+}
+
+.default_qr_img {
+    position: absolute;
+    top: 0px;
+    left: 680px;
+    z-index:1;
+}
+
+.h1_about {
+    position: absolute;
+    top: 730px;
+    left: 406px;
+    z-index:1
+}
+
+.p_about {
+    text-align: center;
+    position: absolute;
+    top: 826px;
+    left: 390px;
+    z-index:1;
+}
+
+.h1_contacts {
+    position: absolute;
+    top: 1520px;
+    left: 455px;
+    z-index:1;
+}
+
+.p_github {
+    position: absolute;
+    top: 1620px;
+    left: 480px;
+    z-index:1;
+}
+
+.img_github {
+    height:25%;
+    width:25%;
+}
+
+.p_mailto {
+    position: absolute;
+    top: 1620px;
+    left: 660px;
+    z-index:1;
+}
+
+.img_mailto {
+    height:17%;
+    width:17%;
+}
+
 
 #sidebar ul li {
     list-style: none;
