--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -1,3 +1,4 @@
+/* Essential basic styles*/
 body, html {
     background-color: #fff;
     margin: 0;
@@ -31,6 +32,8 @@ body, html {
     padding: 0;
     scroll-behavior: smooth;
 }
+/*End of basic essentials*/
+
  /*too many styles later on*/
 .h1_home {
     position: absolute;
@@ -119,8 +122,10 @@ body, html {
     height:17%;
     width:17%;
 }
+/*End of too many styles*/
 
-
+/*All stuff connected with sidebar menu and
+hamburger menu button*/
 #sidebar ul li {
     list-style: none;
     color: #efe7df;
@@ -159,13 +164,14 @@ a {
     cursor: pointer;
     margin: 4px 6px;
     position: fixed;
-    top: 14px;
-    left: 19px;
+    top: 17px;
+    left: 21px;
     z-index: 3;
-    width: 39px;
-    height: 6.5px;
+    width: 40px;
+    height: 7.18px;
     background-color: #1e2124;
     transition: 0.85s;
+    border-radius: 2px;
 }
 
 #sidebar .container {
@@ -192,7 +198,9 @@ a {
 #sidebar.active {
     left: 0;
 }
+/*End of sidebar and hamburger stuff*/
 
+/*Two main buttons*/
 .genBtn {
     border: 1;
     color: white;
@@ -220,4 +228,217 @@ a {
     border-radius: 5.5px;
     margin: 0px 491px;
     cursor: pointer;
+}
+/*End of the main buttons*/
+
+/*Classes that should be changed when using the site on mobile*/
+@media only screen and (max-width: 600px) {
+    body, html {
+        background-color: #caff33;
+        margin: 0;
+        max-width: 600px;
+        height: 100%;
+        min-height: 100%;
+        font-family: "Ubuntu Mono";
+        position: absolute;
+        z-index: 1;
+        scroll-behavior: smooth;
+    }
+
+    .home {
+        h1 {
+            font-size: 29px;
+            color: #330703;
+        }
+        p {
+            font-size: 16px;
+            color: #000;
+            text-align: inline;
+        }
+    max-width: 600px;
+    margin: 0;
+    background-color: #caff33;
+    min-height: 100%;
+    height: 1800px;
+    background-size: cover;
+    text-align: left;
+    position: absolute;
+    z-index: 1;
+    padding: 0;
+    scroll-behavior: smooth;
+    }
+
+    /*too many styles later on*/
+    .h1_home {
+        position: absolute;
+        top: 63px;
+        left: 27px;
+        z-index:1;
+    }
+
+    .form_home {
+        position: absolute;
+        top: 139px;
+        left: 27px;
+        z-index:1;
+    }
+
+    .img_code1 {
+        position: absolute;
+        top: 0px;
+        left: 230px;
+        z-index:1;
+        width: 25%;
+        height: 25%;
+    }
+
+    /*this is not in html cause there is called downloadBtn*/.a_code1_download {
+        position: relative;
+        top: 10px;
+        left: 199px;
+        z-index:1;
+    }
+
+    .h1_code_example {
+        position: absolute;
+        top: 430px;
+        left: 0px;
+        z-index:1;
+    }
+
+    .default_qr_img {
+        position: absolute;
+        top: 489px;
+        left: -5px;
+        z-index:1;
+        /*width: 65%;
+        height: 65%;*/
+    }
+
+    .h1_about {
+        position: absolute;
+        top: 1020px;
+        left: 19px;
+        z-index:1;
+        text-align: center;
+    }
+
+    .p_about {
+        text-align: center;
+        position: absolute;
+        top: 1108px;
+        left: 25px;
+        z-index:1;
+    }
+
+    .h1_contacts {
+        position: absolute;
+        top: 1380px;
+        left: 45px;
+        z-index:1;
+        text-align: center;
+    }
+
+    .p_github {
+        position: absolute;
+        top: 1444px;
+        left: 80px;
+        z-index:1;
+    }
+
+    .img_github {
+        height:25%;
+        width:25%;
+    }
+
+    .p_mailto {
+        position: absolute;
+        top: 1444px;
+        left: 210px;
+        z-index:1;
+    }
+
+    .img_mailto {
+        height:40%;
+        width:40%;
+    }
+
+    /*All stuff connected with sidebar menu and
+    hamburger menu button*/
+    #sidebar ul li {
+        display: block;
+        margin-top: 50px;
+        list-style: none;
+        color: #efe7df;
+        font-size: 23px;
+        font-weight: bold;
+        padding: 30px 15px;
+    }
+
+    #sidebar a {
+        color: #fff;
+    }
+
+    #sidebar {
+        position: fixed;
+        z-index: 2;
+        width: 160px;
+        left: -160px;
+        height: 1800px;
+        transition: 0.6s;
+        background-color: #1e2124;
+    }
+
+    #sidebar.active {
+        left: 0;
+    }
+
+    a {
+        height: 8.5px;
+        width: 42px;
+    }
+
+    .container .bar1,
+    .container .bar2,
+    .container .bar3 {
+        display: block;
+        cursor: pointer;
+        margin: 3.5px 6px;
+        position: fixed;
+        top: 14px;
+        left: 19px;
+        z-index: 3;
+        width: 40px;
+        height: 7.2px;
+        background-color: #1e2124;
+        transition: 0.85s;
+        border-radius: 2px;
+    }
+
+    #sidebar .container {
+        position: absolute;
+        top: 30px;
+        left: 160px;
+    }
+
+    .transform .bar1 {
+        transform: translate(0, 12.3px) rotate(-45deg);
+        background-color: #caff33;
+    }
+
+    .transform .bar2 {
+        transform: translate(0,0.21px) rotate(45deg);
+        background-color: #caff33;
+    }
+
+    .transform .bar3 {
+        transform: translate(0, -13px) rotate(45deg);
+        background-color: #caff33;
+    }
+
+    #sidebar.active {
+        left: 0;
+    }
+    /*End of sidebar and hamburger stuff*/
+
 }
