--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -17,7 +17,7 @@
                 <div class="bar3" style="position: fixed; top: 46px; left: 21px;"></div>
             </a>
 
-            <ul style="display: block;">
+            <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contacts">Contacts</a></li>
@@ -28,6 +28,10 @@
                 function Function1(x) {
                     document.getElementById('sidebar').classList.toggle('active');
                     x.classList.toggle("transform");
+                }
+
+                function myFunction() {
+                    document.getElementById("qrdata").defaultValue = "Test the new feature";
                 }
             </script>
 
