--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -28,10 +28,17 @@
 
                 {% if data_check %}
 
-                <p class="p_click">Download your code by clicking on it!</p>
+                <p class="p_click">download your code by clicking on it!</p>
                 <p class="img_code1"><a href={{code1}} download="{{name}}"><img src="{{code1}}"></a></p>
                     <!--<a href={{code1}} download="{{name}}" class="downloadBtn"
                     type="download">Download</a>-->
+
+                {% elif data_check and huge_code_check %}
+
+                <p class="p_click"
+                >your qr code is too big for this page<br> download it by clicking file icon</p>
+                <p class="p_qr_icon"><a download="{{name}}"><img class="img_qr_icon"
+                        src="../static/media/qr_code_icon.jpg"></a></p>
 
                 {% else %}
 
