--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -50,25 +50,16 @@ body, html {
 }
 
 .p_click {
-    text-weight: bold;
-    font-size: 12px;
-    display: inline;
+    text-align: center;
     position: relative;
-    top: -450px;
-    left: 450px;
+    top: -500px;
+    left: 560px;
 }
 
 .img_code1 {
     position: absolute;
     top: -40px;
     left: 610px;
-    z-index:1;
-}
-
-/*this is not in html cause there is called downloadBtn*/.a_code1_download {
-    position: relative;
-    top: 10px;
-    left: 280px;
     z-index:1;
 }
 
@@ -133,27 +124,27 @@ body, html {
 }
 
 .p_qr_icon {
-    position: absolute;
-    top: -70px;
-    left: 700px;
+    position: relative;
+    top: -485px;
+    left: 715px;
     z-index:1;
 }
 
 .img_qr_icon {
-    height: 30%;
-    width: 30%;
+    height: 40%;
+    width: 40%;
 }
 /*End of too many styles*/
 
 /*All stuff connected with sidebar menu and
 hamburger menu button*/
 #sidebar ul li {
-    display: block;
+    display: list-item;
     list-style: none;
     color: #efe7df;
     font-size: 27px;
     font-weight: bold;
-    padding: 20px 60px;
+    padding: 18px 60px;
 }
 
 #sidebar a {
@@ -163,8 +154,8 @@ hamburger menu button*/
 #sidebar {
     position: fixed;
     z-index: 2;
-    width: 350px;
-    left: -350px;
+    width: 325px;
+    left: -325px;
     height: 100%;
     transition: 0.6s;
     background-color: #1e2124;
@@ -236,19 +227,6 @@ a {
     cursor: pointer;
 }
 
-/* now you can download code
-by clicking on it!.downloadBtn {
-    position: relative;
-    left: 646px;
-    padding: 10px 33px;
-    color: white;
-    background-color: #1bf251;
-    text-decoration: none;
-    font-family: monospace;
-    font-size: 16px;
-    cursor: pointer;
-}*/
-
 /*End of the main buttons*/
 
 /*Classes that should be changed when using the site on mobile*/
@@ -289,6 +267,13 @@ by clicking on it!.downloadBtn {
         top: 139px;
         left: 20px;
         z-index:1;
+    }
+
+    .p_click {
+    text-align: center;
+    position: relative;
+    top: 80px;
+    left: -75px;
     }
 
     .img_code1 {
@@ -371,6 +356,18 @@ by clicking on it!.downloadBtn {
         width:25%;
     }
 
+    .p_qr_icon {
+    position: relative;
+    top: 75px;
+    left: 50px;
+    z-index:1;
+    }
+
+    .img_qr_icon {
+    height: 40%;
+    width: 40%;
+    }
+
     /*All stuff connected with sidebar menu and
     hamburger menu button*/
     #sidebar ul li {
@@ -424,10 +421,10 @@ by clicking on it!.downloadBtn {
     }
 
     #sidebar .container {
-        position: absolute;
-        top: 30px;
-        left: 160px;
-    }
+        position: fixed;
+        top: 17px;
+        left: 21px;
+}
 
     .transform .bar1 {
         transform: translate(0, 12.3px) rotate(-45deg);
