--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -24,6 +24,16 @@
             </ul>
 
         </div>
+
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropBtn">Dropdown</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#contact">Contact</a>
+                </div>
+        </div>
+
             <script>
                 function Function1(x) {
                     document.getElementById('sidebar').classList.toggle('active');
@@ -32,6 +42,27 @@
 
                 function myFunction() {
                     document.getElementById("qrdata").defaultValue = "Test the new feature";
+                }
+
+                /* dropdown menu stuff */
+                /* When the user clicks on the button,
+                toggle between hiding and showing the dropdown content */
+                function myFunction2() {
+                    document.getElementById("myDropdown").classList.toggle("show");
+                }
+
+                // Close the dropdown if the user clicks outside of it
+                window.onclick = function(event) {
+                    if (!event.target.matches('.dropBtn')) {
+                        var dropdowns = document.getElementsByClassName("dropdown-content");
+                        var i;
+                        for (i = 0; i < dropdowns.length; i++) {
+                            var openDropdown = dropdowns[i];
+                            if (openDropdown.classList.contains('show')) {
+                                openDropdown.classList.remove('show');
+                            }
+                        }
+                    }
                 }
             </script>
 
