--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -224,7 +224,7 @@ a {
     cursor: pointer;
 }
 
-/* Dropdown menu settings */
+/* first dropdown menu settings */
 .dropBtn {
   background-color: #3498DB;
   color: white;
@@ -239,8 +239,9 @@ a {
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+    margin-top: 620px;
+    margin-left: 78px;
+    display: inline-block;
 }
 
 .dropdown-content {
@@ -263,6 +264,47 @@ a {
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
+
+/* The second dropdown */
+.dropBtn2 {
+  background-color: #3498DB;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropBtn2:hover, .dropBtn:focus {
+  background-color: #2980B9;
+}
+
+.dropdown2 {
+    top: 660px;
+    left: 33px;
+    display: inline-block;
+}
+
+.dropdown-content2 {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content2 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown2 a:hover {background-color: #ddd;}
+
+.show2 {display: block;}
 
 /*End of the main buttons*/
 
@@ -293,8 +335,7 @@ a {
 
     /*too many styles later on*/
     .h1_home {
-        position: absolute;
-        top: 63px;
+        margin-top: 63px;
         left: 27px;
         z-index:1;
     }
