--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -50,67 +50,68 @@
 
                 <!-- Pattern color picker -->
                 <label for="color">Select pattern color(default is black):</label>
-                <input type="color" id="color" name="color" value="#000"><br>
+                <input type="color" id="patternColor" name="patternColor" value="blue"><br>
 
                 <!-- Background color picker -->
                 <label for="color">Select the color(default is white):</label>
-                <input type="color" id="bg-color" name="color" value="#f0ebdf">
+                <input type="color" id="backgroundColor" name="backgroundColor" value="green">
             </div>
         </div>
 
-            <script>
-                function Function1(x) {
-                    document.getElementById('sidebar').classList.toggle('active');
-                    x.classList.toggle("transform");
-                }
+        <script>
+            function Function1(x) {
+                document.getElementById('sidebar').classList.toggle('active');
+                x.classList.toggle("transform");
+            }
 
-                /* function will be used to save previous data */
-                function myFunction() {
-                    document.getElementById("qrdata").defaultValue = "Test the new feature";
-                }
+            /* function will be used to save previous data */
+            function myFunction() {
+                document.getElementById("qrdata").defaultValue = "Test the new feature";
+            }
 
-                /* dropdown menu stuff */
-                /* When the user clicks on the button,
-                toggle between hiding and showing the dropdown content */
-                function myFunction2() {
-                    document.getElementById("myDropdown").classList.toggle("show");
-                }
+            /* dropdown menu stuff */
+            /* When the user clicks on the button,
+            toggle between hiding and showing the dropdown content */
+            function myFunction2() {
+                document.getElementById("myDropdown").classList.toggle("show");
+            }
 
-                // Close the dropdown if the user clicks outside of it
-                window.onclick = function(event) {
-                    if (!event.target.matches('.dropBtn')) {
-                        var dropdowns = document.getElementsByClassName("dropdown-content");
-                        var i;
-                        for (i = 0; i < dropdowns.length; i++) {
-                            var openDropdown = dropdowns[i];
-                            if (openDropdown.classList.contains('show')) {
-                                openDropdown.classList.remove('show');
-                            }
+            // Close the dropdown if the user clicks outside of it
+            window.onclick = function(event) {
+                if (!event.target.matches('.dropBtn')) {
+                    var dropdowns = document.getElementsByClassName("dropdown-content");
+                    var i;
+                    for (i = 0; i < dropdowns.length; i++) {
+                        var openDropdown = dropdowns[i];
+                        if (openDropdown.classList.contains('show')) {
+                            openDropdown.classList.remove('show');
                         }
                     }
                 }
+            }
 
-                /* second dropdown menu stuff */
-                /* When the user clicks on the button,
-                toggle between hiding and showing the dropdown content */
-                function myFunction3() {
-                    document.getElementById("myDropdown2").classList.toggle("show2");
-                }
+            /* second dropdown menu stuff */
+            /* When the user clicks on the button,
+            toggle between hiding and showing the dropdown content */
+            function myFunction3() {
+                document.getElementById("myDropdown2").classList.toggle("show2");
+            }
 
-                // Close the dropdown if the user clicks outside of it
-                window.onclick = function(event) {
-                    if (!event.target.matches('.dropBtn2')) {
-                        var dropdowns = document.getElementsByClassName("dropdown-content2");
-                        var i;
-                        for (i = 0; i < dropdowns.length; i++) {
-                            var openDropdown = dropdowns[i];
-                            if (openDropdown.classList.contains('show2')) {
-                                openDropdown.classList.remove('show2');
-                            }
-                        }
+            // Close the dropdown if the user clicks outside of it
+            window.onclick = function(event) {
+                if (!event.target.matches('.dropBtn2')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content2");
+                var i;
+                for (i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show2')) {
+                        openDropdown.classList.remove('show2');
                     }
                 }
-            </script>
+            }
+        }
+
+        </script>
 
         {% block body %}
 
