--- a/GeneratorQR/Olympia/templates/homepage.html
+++ b/GeneratorQR/Olympia/templates/homepage.html
@@ -3,30 +3,89 @@
 {% block body %}
 
         <div style="position: static; scroll-behavior: smooth" class="home">
+            <h1 class="h1_welcome" id="welcome">Welcome to QR Code Machine!</h1>
             <h1 class="h1_home" id="home">Create your QR Code!</h1>
             <form class="form_home" action="/" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
 
-                {% if %}
-
                 <label for="qrdata">Put data you want to code here:</label><br>
-                <textarea rows="15" cols="65" type="text" id="qrdata" name="qrdata"></textarea><br>
+                    <textarea rows="15" cols="65" type="text" id="qrdata" name="qrdata"></textarea><br>
                 <label for="qrdata">Enter the name of the file to save your code in:</label><br>
-                <textarea rows="1" cols="25" type="text" id="filename"
-                          name="filename" value="{{filename}}"></textarea><br>
-                <!-- Poll file format -->
-                <label for="poll">Choose file format for your code</label><br>
+                    <textarea rows="1" cols="25" type="text" id="filename"
+                              name="filename" value="{{filename}}"></textarea><br>
 
-                <input type="radio" id="jpg" name="fileFormat" value=".jpg">
-                <label for="jpg">.jpg</label><br>
+                <div class="dropdown">
+                    <button onclick="myFunction1()" class="dropBtn">Dropdown</button>
+                    <div id="myDropdown" class="dropdown-content">
+                        <!-- Poll file format -->
+                        <label for="poll">Choose file format for your code</label><br>
 
-                <input type="radio" id="png" name="fileFormat" value=".png">
-                <label for="png">.png</label><br>
+                        <input type="radio" id="jpg" name="fileFormat" value=".jpg">
+                        <label for="jpg">.jpg</label><br>
 
-                <input type="radio" id="webp" name="fileFormat" value=".webp">
-                <label for="webp">.webp</label><br>
+                        <input type="radio" id="png" name="fileFormat" value=".png">
+                        <label for="png">.png</label><br>
 
-                <input id="submit" onclick="myFunction()" type="submit" class="genBtn" value="Generate" />
+                        <input type="radio" id="webp" name="fileFormat" value=".webp">
+                        <label for="webp">.webp</label><br>
+
+                        <!-- Poll error correction -->
+                        <label for="poll">Choose an error correction level</label><br>
+                        <input type="radio" id="L" name="EC" value="L">
+                            <label for="L"> L (7%)</label><br>
+
+                        <input type="radio" id="M" name="EC" value="M">
+                            <label for="M"> M (15%)</label><br>
+
+                        <input type="radio" id="Q" name="EC" value="Q">
+                            <label for="Q"> Q (25%)</label><br>
+
+                        <input type="radio" id="H" name="EC" value="H">
+                            <label for="H"> H (30%)</label><br>
+
+                        <!-- Color Playground -->
+                        <label for="poll">You can play with colors of your code here (DEMO)</label><br>
+                        <label for="poll">Here choose the color for the pattern (default is black)</label><br>
+
+                        <input type="radio" id="green" name="color" value="green">
+                            <label for="green"> Green</label><br>
+
+                        <input type="radio" id="blue" name="color" value="light-blue">
+                            <label for="blue"> Blue</label><br>
+
+                        <input type="radio" id="orange" name="color" value="orange">
+                            <label for="orange"> Orange</label><br>
+
+                        <input type="radio" id="purple" name="color" value="purple">
+                            <label for="purple"> Purple</label><br>
+
+                        <input type="radio" id="red" name="color" value="red">
+                            <label for="red"> Red</label><br>
+
+                        <!-- Background Color Playground -->
+                        <label for="poll">Here choose the color for the background (default is white)</label><br>
+
+                        <input type="radio" id="bg-green" name="bg-color" value="green">
+                            <label for="bg-green"> Green</label><br>
+
+                        <input type="radio" id="bg-blue" name="bg-color" value="blue">
+                            <label for="bg-blue"> Blue</label><br>
+
+                        <input type="radio" id="bg-orange" name="bg-color" value="orange">
+                            <label for="bg-orange"> Orange</label><br>
+
+                        <input type="radio" id="bg-purple" name="bg-color" value="purple">
+                            <label for="bg-purple"> Purple</label><br>
+
+                        <input type="radio" id="bg-red" name="bg-color" value="red">
+                            <label for="bg-red"> Red</label><br>
+
+                        <!--<p><input type="submit" value="Submit">Submit</p>-->
+                    </div>
+                </div>
+
+                <input id="submit" onclick="myFunction()" type="submit" class="genBtn"
+                       value="Generate" />
 
                 {% if huge_code_check %}
 
@@ -47,7 +106,6 @@
                 <img class="default_qr_img" src="../static/codes/Hello.jpg">
 
                 {% endif %}
-
             </form>
 
             <h1 class="h1_about" id="about">Something about our project</h1>
