--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -22,96 +22,9 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
-
         </div>
 
-        <div class="dropdown">
-            <button onclick="myFunction2()" class="dropBtn">Advanced settings</button>
-            <div id="myDropdown" class="dropdown-content">
-                <label for="poll">Choose an error correction level (default is M)</label><br>
-
-                <input type="radio" id="L" name="EC" value="L">
-                <label for="L"> L (7%)</label><br>
-
-                <input type="radio" id="M" name="EC" value="M">
-                <label for="M"> M (15%)</label><br>
-
-                <input type="radio" id="Q" name="EC" value="Q">
-                <label for="Q"> Q (25%)</label><br>
-
-                <input type="radio" id="H" name="EC" value="H">
-                <label for="H"> H (30%)</label><br>
-            </div>
-        </div>
-
-        <div class="dropdown2">
-            <button onclick="myFunction3()" class="dropBtn2">Color Picker</button>
-            <div id="myDropdown2" class="dropdown-content">
-
-                <!-- Pattern color picker -->
-                <label for="color">Select pattern color(default is black):</label>
-                <input type="color" id="patternColor" name="patternColor" value="blue"><br>
-
-                <!-- Background color picker -->
-                <label for="color">Select the color(default is white):</label>
-                <input type="color" id="backgroundColor" name="backgroundColor" value="green">
-            </div>
-        </div>
-
-        <script>
-            function Function1(x) {
-                document.getElementById('sidebar').classList.toggle('active');
-                x.classList.toggle("transform");
-            }
-
-            /* function will be used to save previous data */
-            function myFunction() {
-                document.getElementById("qrdata").defaultValue = "Test the new feature";
-            }
-
-            /* dropdown menu stuff */
-            /* When the user clicks on the button,
-            toggle between hiding and showing the dropdown content */
-            function myFunction2() {
-                document.getElementById("myDropdown").classList.toggle("show");
-            }
-
-            // Close the dropdown if the user clicks outside of it
-            window.onclick = function(event) {
-                if (!event.target.matches('.dropBtn')) {
-                    var dropdowns = document.getElementsByClassName("dropdown-content");
-                    var i;
-                    for (i = 0; i < dropdowns.length; i++) {
-                        var openDropdown = dropdowns[i];
-                        if (openDropdown.classList.contains('show')) {
-                            openDropdown.classList.remove('show');
-                        }
-                    }
-                }
-            }
-
-            /* second dropdown menu stuff */
-            /* When the user clicks on the button,
-            toggle between hiding and showing the dropdown content */
-            function myFunction3() {
-                document.getElementById("myDropdown2").classList.toggle("show2");
-            }
-
-            // Close the dropdown if the user clicks outside of it
-            window.onclick = function(event) {
-                if (!event.target.matches('.dropBtn2')) {
-                var dropdowns = document.getElementsByClassName("dropdown-content2");
-                var i;
-                for (i = 0; i < dropdowns.length; i++) {
-                    var openDropdown = dropdowns[i];
-                    if (openDropdown.classList.contains('show2')) {
-                        openDropdown.classList.remove('show2');
-                    }
-                }
-            }
-        }
-
-        </script>
+        <script src="{% static 'index.js' %}"></script>
 
         {% block body %}
 
