--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -34,72 +34,74 @@ body, html {
 }
 /*End of basic essentials*/
 
- /*too many styles later on*/
+/*too many styles later on*/
+.h1_welcome {
+    margin-top: 28px;
+    text-align: center;
+    text-decoration: underline overline;
+    z-index: 1;
+}
+
 .h1_home {
-    position: absolute;
-    top: 90px;
-    left: 80px;
+    margin-top: 55px;
+    margin-left: 80px;
     z-index:1;
 }
 
 .form_home {
-    position: absolute;
-    top: 185px;
-    left: 80px;
+    margin-top: 55px;
+    margin-left: 80px;
     z-index:1;
 }
 
 .p_click {
+    margin-top: -803px;
+    margin-left: 485px;
     text-align: center;
-    position: relative;
-    top: -845px;
-    left: 550px;
 }
 
 .img_code1 {
-    position: absolute;
-    top: -40px;
-    left: 610px;
+    margin-top: 15px;
+    margin-left: 660px;
     z-index:1;
 }
 
 .h1_code_example {
     position: absolute;
-    top: -100px;
-    left: 679px;
+    top: 110px;
+    left: 730px;
     z-index:1;
 }
 
 .default_qr_img {
     position: absolute;
-    top: 0px;
-    left: 680px;
+    top: 178px;
+    left: 730px;
     z-index:1;
 }
 
 .h1_about {
     text-align: center;
-    margin-top: 970px;
+    margin-top: 180px;
     z-index:1
 }
 
 .p_about {
+    margin-top: 34px;
     text-align: center;
-    margin-top: 38px;
     z-index:1;
 }
 
 .h1_contacts {
-    position: absolute;
-    top: 1520px;
-    left: 455px;
+    margin-top: 580px;
+    text-align: center;
     z-index:1;
 }
 
 .p_github {
     position: absolute;
-    top: 1620px;
-    left: 480px;
+    margin-top: 14px;
+    margin-left: 490px;
     z-index:1;
 }
 
@@ -110,8 +112,8 @@ body, html {
 
 .p_mailto {
     position: absolute;
-    top: 1620px;
-    left: 660px;
+    margin-top: 14px;
+    margin-left: 660px;
     z-index:1;
 }
 
@@ -151,8 +153,8 @@ hamburger menu button*/
 #sidebar {
     position: fixed;
     z-index: 2;
-    width: 325px;
-    left: -325px;
+    width: 300px;
+    left: -300px;
     height: 100%;
     transition: 0.6s;
     background-color: #1e2124;
@@ -225,6 +227,7 @@ a {
 }
 
 /* first dropdown menu settings */
+/* Dropdown menu settings */
 .dropBtn {
   background-color: #3498DB;
   color: white;
@@ -239,9 +242,8 @@ a {
 }
 
 .dropdown {
-    margin-top: 620px;
-    margin-left: 78px;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .dropdown-content {
@@ -262,49 +264,7 @@ a {
 }
 
 .dropdown a:hover {background-color: #ddd;}
-
 .show {display: block;}
-
-/* The second dropdown */
-.dropBtn2 {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropBtn2:hover, .dropBtn:focus {
-  background-color: #2980B9;
-}
-
-.dropdown2 {
-    top: 660px;
-    left: 33px;
-    display: inline-block;
-}
-
-.dropdown-content2 {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content2 a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown2 a:hover {background-color: #ddd;}
-
-.show2 {display: block;}
 
 /*End of the main buttons*/
 
