--- a/GeneratorQR/Olympia/static/style.css
+++ b/GeneratorQR/Olympia/static/style.css
@@ -54,6 +54,25 @@ body, html {
     z-index:1;
 }
 
+/*text arii */
+textarea {
+  field-sizing: content;
+}
+
+/*.qrdata {
+  display: inline-block;
+  border: solid 1px #000;
+  min-height: 200px;
+  width: 300px;
+}
+
+.filename {
+  display: inline-block;
+  border: solid 1px #000;
+  min-height: 200px;
+  width: 100px;
+}*/
+
 .p_click {
     margin-top: -803px;
     margin-left: 485px;
@@ -269,54 +288,47 @@ a {
 /*End of the main buttons*/
 
 /*Classes that should be changed when using the site on mobile*/
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 1000px) {
     .home {
         h1 {
             font-size: 28px;
-            color: #330703;
         }
         p {
             font-size: 19px;
-            color: #000;
-            text-align: inline;
         }
-    max-width: 600px;
-    margin: 0;
-    background-color: #caff33;
-    min-height: 100%;
-    height: 1800px;
-    background-size: cover;
-    text-align: left;
-    position: absolute;
-    z-index: 1;
-    padding: 0;
-    scroll-behavior: smooth;
+    width: 100%;
+    height: 1900px;
     }
 
     /*too many styles later on*/
+
+    .h1_welcome {
+        display: none;
+    }
+
     .h1_home {
-        margin-top: 10px;
-        left: 27px;
+        margin-top: 55px;
+        margin-left: 15px;
+        padding: 10px;
         z-index:1;
     }
 
     .form_home {
+
+        padding-top: 15px;
         margin-top: -30px;
-        left: 20px;
+        margin-left: 25px;
         z-index:1;
     }
 
     .p_click {
-    text-align: center;
-    margin-top: 80px;
-    left: -75px;
+        margin-top: 20px;
+        margin-left: 0px;
     }
 
     .img_code1 {
-        position: absolute;
-        top: 580px;
-        left: 0px;
-        z-index:1;
+        margin-top: 0px;
+        margin-left: 0px;
         width: 25%;
         height: 25%;
     }
@@ -329,66 +341,44 @@ a {
     }
 
     .h1_code_example {
-        top: 430px;
-        left: 0px;
-        z-index:1;
+        display: none;
     }
 
     .default_qr_img {
-        position: absolute;
-        top: 489px;
-        left: -5px;
-        z-index:1;
-        /*width: 65%;
-        height: 65%;*/
+        display: none;
     }
 
     .h1_about {
-        position: absolute;
-        top: 1000px;
-        left: 19px;
-        z-index:1;
-        text-align: center;
+        margin-top: 80px;
     }
 
     .p_about {
-        text-align: center;
-        position: absolute;
-        top: 1100px;
-        left: 25px;
-        z-index:1;
+        margin-top: 0px;
     }
 
     .h1_contacts {
-        position: absolute;
-        top: 1380px;
-        left: 45px;
-        z-index:1;
-        text-align: center;
+        margin-top: 90px;
+
     }
 
     .p_github {
-        position: absolute;
-        top: 1444px;
-        left: 80px;
-        z-index:1;
+        margin-top: 13px;
+        margin-left: 70px;
     }
 
     .img_github {
-        height:25%;
-        width:25%;
+        height: 30%;
+        width: 30%;
     }
 
     .p_mailto {
-        position: absolute;
-        top: 1444px;
-        left: 210px;
-        z-index:1;
+        margin-top: 13px;
+        margin-left: 210px;
     }
 
     .img_mailto {
-        height:25%;
-        width:25%;
+        height: 41%;
+        width: 41%;
     }
 
     .p_qr_icon {
@@ -429,10 +419,6 @@ a {
         background-color: #1e2124;
     }
 
-    #sidebar.active {
-        left: 0;
-    }
-
     a {
         height: 8.5px;
         width: 42px;
@@ -445,7 +431,7 @@ a {
         cursor: pointer;
         margin: 3.5px 6px;
         position: fixed;
-        top: 14px;
+        top: 13px;
         left: 19px;
         z-index: 3;
         width: 40px;
@@ -455,11 +441,11 @@ a {
         border-radius: 2px;
     }
 
-    #sidebar .container {
+    #sidebar.container {
         position: fixed;
         top: 17px;
         left: 21px;
-}
+    }
 
     .transform .bar1 {
         transform: translate(0, 12.3px) rotate(-45deg);
@@ -480,5 +466,3 @@ a {
         left: 0;
     }
     /*End of sidebar and hamburger stuff*/
-
-}
