--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -12,17 +12,25 @@
 
         <div id="sidebar">
             <a class="container" onclick="Function1(this)">
-                <div class="bar1" style="position: fixed; top: 20px; left: 21px;"></div>
-                <div class="bar2" style="position: fixed; top: 33px; left: 21px;"></div>
-                <div class="bar3" style="position: fixed; top: 46px; left: 21px;"></div>
+                <div class="bar1" style="position: fixed; top: 17px; left: 19px;"></div>
+                <div class="bar2" style="position: fixed; top: 30px; left: 19px;"></div>
+                <div class="bar3" style="position: fixed; top: 43px; left: 19px;"></div>
             </a>
-
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </div>
+
+        <!--<div class="dropdown">
+                    <button onclick="myFunction1()" class="dropBtn">Dropdown</button>
+                    <div id="myDropdown" class="dropdown-content">
+
+                        <p><input type="submit" value="Submit">Submit</p>
+                    </div>
+                </div>-->
+
 
         <script src="{% static 'index.js' %}"></script>
 
