--- a/GeneratorQR/Olympia/templates/base.html
+++ b/GeneratorQR/Olympia/templates/base.html
@@ -10,6 +10,10 @@
 
     <body>
 
+        <!--<span class="EN">english</span>
+        <span class="BY">беларуская</span>
+        <input type="checkbox" class="check">-->
+
         <div id="sidebar">
             <a class="container" onclick="Function1(this)">
                 <div class="bar1" style="position: fixed; top: 17px; left: 19px;"></div>
